# Florune

./: .gitignore  Cargo.toml  README.md  app.py  config.json  index.html  main.js  main.qml  package-lock.json  package.json  preload.js  style.tcss
core/: config.py  models.py  session.py
core/api/: jellyfin_client.py  navidrome_client.py
electron/: main.js
src/: main.rs  main.tsx  subsonic.rs
src/api/: navidrome.ts
src/app/: App.tsx
src/bridge/: album_model.rs  engine.rs  mod.rs  models.rs
src/components/: Layout.tsx  PlaylistSidebar.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  Card.tsx
src/features/player/: Player.tsx  PlayerView.tsx  playerStore.tsx  usePlayer.ts
src/hooks/: useFetch.ts
src/opensubsonic/: client.rs  mod.rs  models.rs
src/services/: album_service.rs
src/styles/: PlayerView.css  index.css  reset.css  ui.css
src/types/: navidrome.ts
ui/: main.qml
ui/screens/: __init__.py  dashboard.py  login.py  player.py
