[package]
name = "navirust"
version = "0.1.0"
edition = "2021"

[dependencies]

# Qt / QML
qmetaobject = "0.2.10"

# Async Runtime
tokio = { version = "1.52", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "http2",
    "charset"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment Variables
dotenvy = "0.15"

# Hashing
md5 = "0.7"

# Utilities
hex = "0.4"
